crates/iota-move/tests/snapshots/cli_tests__new_tests__new_files.sh.snap
---
source: crates/iota-move/tests/cli_tests.rs
description: tests/tests/new_tests/new_files.sh
---
success: true
exit_code: 0
----- stdout -----
==== files in project ====
.gitignore
Move.toml
sources
tests
==== files in sources ====
example.move
==== files in tests =====
example_tests.move

----- stderr -----