crates/iota-move/tests/snapshots/cli_tests__new_tests__new_then_build.sh.snap
---
source: crates/iota-move/tests/cli_tests.rs
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY IotaSystem
INCLUDING DEPENDENCY Stardust
INCLUDING DEPENDENCY Iota
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
