crates/iota-move/tests/snapshots/cli_tests__new_tests__new_then_test.sh.snap
---
source: crates/iota-move/tests/cli_tests.rs
---
success: true
exit_code: 0
----- stdout -----
INCLUDING DEPENDENCY IotaSystem
INCLUDING DEPENDENCY Stardust
INCLUDING DEPENDENCY Iota
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Running Move unit tests
Test result: OK. Total tests: 0; passed: 0; failed: 0

----- stderr -----
